; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/tip/tip/extr_tipout.c_intSYS.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/tip/tip/extr_tipout.c_intSYS.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BEAUTIFY = common dso_local global i32 0, align 4
@sigbuf = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @intSYS to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intSYS(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @BEAUTIFY, align 4
  %4 = call i32 @value(i32 %3)
  %5 = load i32, i32* @BEAUTIFY, align 4
  %6 = call i32 @value(i32 %5)
  %7 = call i32 @boolean(i32 %6)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @setboolean(i32 %4, i32 %10)
  %12 = load i32, i32* @sigbuf, align 4
  %13 = call i32 @longjmp(i32 %12, i32 1)
  ret void
}

declare dso_local i32 @setboolean(i32, i32) #1

declare dso_local i32 @value(i32) #1

declare dso_local i32 @boolean(i32) #1

declare dso_local i32 @longjmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
